# mssbot

./: Config.hs  Events.hs  IO.hs  IRCIO.hs  Text.hs  main.hs  mssbot.cabal  mssbot.hs  mssbot.prof  stack.yaml
.stack-work/image/0/app/mssbot/: default.irc  freenode.irc
.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-5.9/7.10.3/flag-cache/: ConfigFile-1.1.4-84bb9f32f9537bdc6fd2e0351a5c38f3  HUnit-1.3.1.1-9ae4c2f31abd33c594f24f181b5de86a  MissingH-1.3.0.1-c31e8384125197628b87f15e3c438513  asn1-encoding-0.9.3-0f27517ff517ef3d8101394597f6aa7e  asn1-parse-0.9.4-4784d8dc80d90979ce8421db84a2036c  asn1-types-0.3.2-1efc7f89a2df16b9a5a7a2bb6f8a2b0f  async-2.1.0-033e4fae4da028fc2d6502bd36e5e5a1  base64-bytestring-1.0.0.1-4aa13e7ac7c5b00cc0cd642708d4e148  byteable-0.1.1-38069d1c3de6139ffc8d1d1e85b91030  cereal-0.5.1.0-36c20a2af78a770421c1e59798899a5d  connection-0.2.5-d980fddb233d212a9bce51b8e49a6300  cryptonite-0.10-0ed7503c4c3469b60c80183c420cd160  data-default-class-0.0.1-fcbab95490d730dd2489b628499587cd  hourglass-0.2.10-337cca0f9d281b8b30d82ffb2a5abd50  hslogger-1.2.9-2af1adc1920f7fa18ae9468569edd1ed  memory-0.11-34b235ce0a7348c8f71025038cd054c2  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  network-2.6.2.1-b9017957b1e5d0d1d9d4782a2ba4fcb5  old-locale-1.0.0.7-0db938eb141b01f4936a21aef6b843bf  old-time-1.1.0.3-4494378134a1c0eadea2f9ea5411834e  parsec-3.1.9-846510776e95ad6c72d82358c09b4bee  pem-0.2.2-5f6df2ca3b7f68abc9010881cb82b5dd  random-1.1-7d035f9e510822cd64834106e4acc4b7  regex-base-0.93.2-3cb44d298ab9ca7f54f47a7f91b450e3  regex-compat-0.95.1-e570f0cd354a7747bb118a5b7e246f1e  regex-pcre-0.94.4-463393ccc9a7d8f7d8dec54a5c61e2bf  regex-posix-0.95.2-96cb5bbe39a887eefb3fdf8519f0dbda  simpleirc-0.3.1-d23d9b09313eb43ae114efb729b616b1  socks-0.5.4-4b16e81cf79141d79d10cc29019ab875  stm-2.4.4.1-7050c728ed5b2315e2c6b56d8bf9837f  tagsoup-0.13.9-4a650a6238200608e53cea994e56508e  text-1.2.2.1-d0adb978563e9f52dc308d1d0db7212c  tls-1.3.4-bf06f68e2efe699e04b32d5dc8c30bc3  utf8-string-1.0.1.1-df4bc704a473da34292b0ea0e21e5412  x509-1.6.3-59f60f51c87b19fc24f36f12df022f52  x509-store-1.6.1-5243452d2e696c3b3ba556dfae01ce50  x509-system-1.6.3-a498f1bad85bb1419d89ff38ab885ba2  x509-validation-1.6.3-7dd22eeb3644ed8afe322ede1aa2c0e9
.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-5.9/7.10.3/lib/x86_64-linux-ghc-7.10.3/simpleirc-0.3.1-8XLCtlyIFxlHjx0Q1X3hDR/Network/: SimpleIRC.dyn_hi  SimpleIRC.hi  SimpleIRC.p_hi
.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-5.9/7.10.3/lib/x86_64-linux-ghc-7.10.3/simpleirc-0.3.1-8XLCtlyIFxlHjx0Q1X3hDR/Network/SimpleIRC/: Core.dyn_hi  Core.hi  Core.p_hi  Messages.dyn_hi  Messages.hi  Messages.p_hi
.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-5.9/7.10.3/pkgdb/: package.cache  simpleirc-0.3.1-d23d9b09313eb43ae114efb729b616b1.conf
old/: mssbot.cabal
