Name:               mssbot
Version:            0.7.5
License:            BSD3
License-File:       LICENSE
Author:             Brian Robertson <raposa.msscripting@gmail.com>
Maintainer:         Brian Robertson <raposa.msscripting@gmail.com>
Category:           Network
Synopsis:           Maelstrom IRC bot
Description:        Maelstrom IRC bot
Stability:          experimental
Tested-With:        GHC==6.12.3
Build-Type:         Simple
Cabal-Version:      >=1.8.0.6
data-files:			LICENSE

Executable mssbot
  Main-is:          mssbot.hs
  Build-Depends:    base >= 4 && <= 5,
                    regex-pcre >= 0.94.1,
                    simpleirc >= 0.2.0,
                    http-wget >= 0.6.2,
                    utf8-string >= 0.3.6,
                    bytestring >= 0.9.1.7,
                    tagsoup >= 0.12.8,
                    GoogleTranslate >= 0.0.5,
                    directory >= 1.0.1.1,
                    random >= 1.0.0.2,
                    process >= 1.0.1.3,
                    time >= 1.1.4,
                    ConfigFile >= 1.0.6,
                    unix >= 2.4.0.2,
                    mtl >= 1.1.0.2,
                    regex-compat >= 0.93.1
--                    mueval >= 0.8.1

