Name:               mssbot
Version:            0.8.0
License:            BSD3
License-File:       LICENSE
Author:             Brian Robertson <raposa@msscripting.com>
Maintainer:         Brian Robertson <raposa@msscripting.com>
Category:           Network
Synopsis:           Maelstrom IRC bot
Description:        Maelstrom IRC bot
Stability:          experimental
Tested-With:        GHC==6.7.4
Build-Type:         Simple
Cabal-Version:      >=1.14.0.0
data-files:			LICENSE

Library
  exposed-modules:  Config,
                    Events,
                    IO,
                    Text
  buildable:        False
  build-depends:    base >= 4 && <= 5,
                    ConfigFile >= 1.0.6,
                    time >= 1.4,
                    simpleirc >= 0.3.0,
                    directory >= 1.0.1.1,
                    mtl >= 1.1.0.2,
                    utf8-string >= 0.3.6,
                    process >= 1.0.1.3,
                    bytestring >= 0.9.1.7,
                    regex-pcre >= 0.94.1,
                    tagsoup >= 0.12.8,
                    random >= 1.0.1.1

Executable mssbot
  Main-is:          main.hs
  default-language: Haskell2010
  Build-Depends:    base >= 4 && <= 5,
                    ConfigFile >= 1.0.6,
                    time >= 1.4,
                    simpleirc >= 0.3.0,
                    directory >= 1.0.1.1,
                    mtl >= 1.1.0.2,
                    utf8-string >= 0.3.6,
                    process >= 1.0.1.3,
                    bytestring >= 0.9.1.7,
                    regex-pcre >= 0.94.1,
                    tagsoup >= 0.12.8,
                    random >= 1.0.1.1


